# Pragmat

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-20-checkpoint-polish-design.md  2026-06-20-deadline-design.md  2026-06-20-future-agenda-dates-design.md  2026-06-20-oat-to-tailwind-design.md
landing/: README.md  astro.config.mjs  package-lock.json  package.json
landing/src/components/: AppMockup.astro  DitherHero.astro  Icon.astro  PlatformBadges.astro  ProgressiveBlur.astro  SquigglyArrow.astro  TextEffect.astro  TextLoop.astro  TextScramble.astro
landing/src/layouts/: Base.astro
landing/src/pages/: index.astro
landing/src/styles/: global.css
src/: app.ts  date.ts  db.ts  history.ts  icons.ts  keyboard.ts  main.ts  spring.ts  state.ts  themes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_checkpoints_tags.sql  003_burst_arc_notes.sql  004_due_date.sql  005_deadline.sql
src-tauri/src/: lib.rs  main.rs
src/styles/: app.css  tailwind.css  theme.css
src/ui/: anim.ts  board.ts  cls.ts  context-menu.ts  date-popover.ts  drag-reorder.ts  modal.ts  new-popover.ts  progress-ring.ts  search.ts  settings.ts  sidebar.ts  task-item.ts  todo-card.ts
