[package]
name = "pragmat"
version = "0.1.0"
description = "Pragmat — a fast, minimal task app"
authors = ["Pragmat"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk).
name = "pragmat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
